; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/obs-qsv11/extr_obs-qsv11.c_obs_qsv_sei.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/obs-qsv11/extr_obs-qsv11.c_obs_qsv_sei.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.obs_qsv = type { i64, i32*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32**, i64*)* @obs_qsv_sei to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @obs_qsv_sei(i8* %0, i32** %1, i64* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32**, align 8
  %7 = alloca i64*, align 8
  %8 = alloca %struct.obs_qsv*, align 8
  store i8* %0, i8** %5, align 8
  store i32** %1, i32*** %6, align 8
  store i64* %2, i64** %7, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = bitcast i8* %9 to %struct.obs_qsv*
  store %struct.obs_qsv* %10, %struct.obs_qsv** %8, align 8
  %11 = load %struct.obs_qsv*, %struct.obs_qsv** %8, align 8
  %12 = getelementptr inbounds %struct.obs_qsv, %struct.obs_qsv* %11, i32 0, i32 2
  %13 = load i32, i32* %12, align 8
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %16, label %15

15:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %30

16:                                               ; preds = %3
  %17 = load i32**, i32*** %6, align 8
  %18 = bitcast i32** %17 to i64*
  %19 = call i32 @UNUSED_PARAMETER(i64* %18)
  %20 = load i64*, i64** %7, align 8
  %21 = call i32 @UNUSED_PARAMETER(i64* %20)
  %22 = load %struct.obs_qsv*, %struct.obs_qsv** %8, align 8
  %23 = getelementptr inbounds %struct.obs_qsv, %struct.obs_qsv* %22, i32 0, i32 1
  %24 = load i32*, i32** %23, align 8
  %25 = load i32**, i32*** %6, align 8
  store i32* %24, i32** %25, align 8
  %26 = load %struct.obs_qsv*, %struct.obs_qsv** %8, align 8
  %27 = getelementptr inbounds %struct.obs_qsv, %struct.obs_qsv* %26, i32 0, i32 0
  %28 = load i64, i64* %27, align 8
  %29 = load i64*, i64** %7, align 8
  store i64 %28, i64* %29, align 8
  store i32 1, i32* %4, align 4
  br label %30

30:                                               ; preds = %16, %15
  %31 = load i32, i32* %4, align 4
  ret i32 %31
}

declare dso_local i32 @UNUSED_PARAMETER(i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
